perf(cloud): 优化feign引入